# photokinthesis

./: .gitignore  CLAUDE.md  README.md  WEB_GUI_README.md  pyproject.toml
collections/phase_0/: 1990s_Spring_Test3_0001.xmp  1990s_Spring_Test3_0002.xmp  202512311952_0001.xmp  202512311952_0002.xmp  202512311952_0003.xmp  202512311952_0004.xmp  202512311952_0005.xmp  202512311952_0007.xmp  202512311952_0008.xmp  202512311952_0009.xmp  202512311952_0010.xmp  202512311952_0012.xmp  202512311952_0013.xmp  202512311952_0014.xmp  202512311952_0015.xmp  202512311952_0016.xmp  202512311952_0017.xmp  202512311952_0018.xmp  202512311952_0019.xmp  202512311952_0020.xmp  202512311952_0021.xmp  202512311952_0022.xmp  202512311952_0023.xmp  202512311952_0024.xmp  202512311952_0025.xmp  202512311952_0026.xmp  202512311952_0027.xmp  202512311952_0028.xmp  202512311952_0029.xmp  202512311952_0030.xmp  202512311952_0031.xmp  202512311952_0032.xmp  202512311952_0033.xmp  202512311952_0034.xmp  202512311952_0035.xmp  202512311952_0036.xmp  202512311952_0037.xmp  202512311952_0038.xmp  202512311952_0039.xmp  202512311952_0040.xmp  (+705 more)
collections/phase_0_tiny/: More_Grandma_Ellen__0006.xmp  More_Grandma_Ellen__0007.xmp
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
scripts/: build_frontend.sh  run_dedup.sh  run_init_collection.sh  run_recognize_faces.sh  run_reorganize.sh  run_serve.sh
src/photokinthesis/: __init__.py  cli.py  collection.py  collections.py  facial_recognition.py  photo.py  utils.py  xmp_parser.py
(+22 files in other folders)
