[project]
name = "photokinthesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ernie Pusateri", email = "erniep@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.0",
    "pillow>=11.3.0",
    "typer>=0.21.1",
    "uvicorn>=0.39.0",
]

[project.scripts]
pk = "photokinthesis.cli:pk"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
